--- a/public/cashfree.html
+++ b/public/cashfree.html
@@ -86,7 +86,10 @@
           try {
             // Get amount from the input field
             const amount = document.getElementById("amount").value;
-
+            if(!(amount &&  amount > 0 && !isNaN(Number(amount)))){
+              alert("Please enter a valid amount");
+              return;
+            }
             // Make API call to your backend to generate payment session ID
             const response = await fetch('http://localhost:3000/cashfree/create-order', {
               method: 'POST',
@@ -98,7 +101,6 @@
 
             // Parse response JSON
             const data = await response.json();
-
             // Check if session ID is received
             if (data.sessionId) {
               // Redirect user to Cashfree payment page with the session ID
