--- a/public/cashfree.html
+++ b/public/cashfree.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cashfree Payment</title>
   <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
-
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <style>
     /* CSS styles */
     body {
