--- a/public/cashfree.html
+++ b/public/cashfree.html
@@ -91,7 +91,7 @@
               return;
             }
             // Make API call to your backend to generate payment session ID
-            const response = await fetch('http://localhost:3000/cashfree/create-order', {
+            const response = await fetch('https://2d2b-2409-40c0-1034-88a3-cc74-36bd-5857-d0fd.ngrok-free.app/cashfree/create-order', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
